<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_vrml_editor</name>
  <version>0.0.0</version>
  <description>The choreonoid_vrml_editor package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
</package>
